DEVK-184 fix(IbFilterTag): layout issue;

--- a/src/app/inobeta-ui/ui/kai-filter/filters/tag/filter-tag.component.scss
+++ b/src/app/inobeta-ui/ui/kai-filter/filters/tag/filter-tag.component.scss
@@ -5,6 +5,15 @@ section.ib-filter-tag {
   @include mat.list-density(-4);
 }
 
+span.ib-filter-value {
+  display: table-cell;
+
+  max-width: 32ch;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 :host cdk-virtual-scroll-viewport {
   height: max-content;
 }
